--- a/udpgw.service
+++ b/udpgw.service
@@ -3,7 +3,7 @@ Description=UDP forwarding for badvpn-tun2socks
 After=nss-lookup.target
 
 [Service]
-ExecStart=/usr/local/bin/badvpn-udpgw --loglevel none --listen-addr 127.0.0.1:7300 --max-clients 1000 --max-connections-for-client 1000
+ExecStart=/usr/local/bin/badvpn-udpgw --loglevel none --fragmentation-latency 0 --transport-mode udp --listen-addr 127.0.0.1:7300 --max-clients 1000 --max-connections-for-client 1000
 User=udpgw
 
 [Install]
