--- a/Slot.yaml
+++ b/Slot.yaml
@@ -8,3 +8,6 @@ payload:
   - DOMAIN-SUFFIX,zzyzx88ollo.com
   - DOMAIN-SUFFIX,dewapokergg.co
   - DOMAIN-SUFFIX,m2.tokemulia.org
+  - DOMAIN-SUFFIX,idn-tw.ppgames.net
+  - DOMAIN-SUFFIX,ppgames.net
+  - DOMAIN-SUFFIX,*.ppgames.net
